Updated quota section to align correctly, updated youtube section and media queries.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -109,9 +109,6 @@ footer h3 {
     font-family: "Inconsolata", sans-serif;
 }
 
-blockquote p {
-    font-size: 20px;
-}
 
 /*--------------------------------------------------------Heading*/
 
@@ -196,6 +193,20 @@ blockquote p {
     border-color: #990000;
 }
 
+.quotes-container {
+    margin-bottom: 2%;
+    font-family: "Exo", sans-serif;
+    color: white;
+}
+
+blockquote p {
+    font-size: 20px;
+}
+
+blockquote footer {
+    color: white;
+}
+
 .gallery-section-image {
     margin: 10px 0 10px 0;
 }
@@ -225,6 +236,7 @@ blockquote p {
 .page-header {
     text-align: center;
     margin-top: -10px;
+    color: white;
 }
 
 .youtube-section {
@@ -233,13 +245,20 @@ blockquote p {
     display: block;
 }
 
+iframe {
+    border: 2px;
+    border-style: solid;
+    border-color: black;
+
+    border-left: 1px;
+}
+
 .youtube-paragraph-section h4 {
     font-size: 17px;
     font-family: "Exo" sans-serif;
     padding-bottom: 10px;
+    color: white;
 }
-
-
 
 .contact-heading {
     font-family: "Exo", sans-serif;
@@ -417,6 +436,30 @@ footer {
         max-width: 100%;
     }
 
+    .youtube-main-section {
+        width: 98%;
+        height: 100%;
+        margin-left: 0px;
+    }
+
+    .youtube-paragraph-section {
+        width: 98%;
+        height: 100%;
+        margin-left: 0px;
+    }
+
+    .youtube-section {
+        width: 98%;
+        height: 100%;
+        margin-left: 0px;
+    }
+
+    iframe {
+        width: 200px;
+        height: 200px;
+
+    }
+
     /*footer media query*/
     .social-links,
     .footer-about {
@@ -501,6 +544,31 @@ footer {
         margin-left: 2.5%;
     }
 
+    .youtube-main-section {
+        width: 100%;
+        height: 100%;
+       margin-left: .2%;
+     
+    }
+
+    .youtube-paragraph-section {
+        width: 100%;
+        height: 100%;
+        margin-left: .2%;
+    }
+
+    .youtube-section {
+        width: 100%;
+        height: 100%;
+        margin-left: .2%;
+    }
+
+    iframe {
+        margin-left: 14%;
+        width: 500px;
+        height: 300px;
+    }
+    
     blockquote p {
         font-size: 80%;
         max-width: 100%;
@@ -547,6 +615,16 @@ footer {
     .main-section {
         margin-left: -1%;
         margin-right: 1%;
+    }
+    
+    .youtube-section {
+        width: 100%;
+        height: 100%;
+        margin-left: 12%;
+    }
+        iframe {
+        width: 700px;
+        height: 500px;
     }
 }
 
